<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Licht Schalter</string>
    <string name="options">Optionen</string>
    <string name="configuration">Konfiguration</string>
    <string name="diningTable">Esstisch</string>
    <string name="couch">Couch</string>
    <string name="z5500Remote">Sound Steuerung</string>
    <string name="description_network_settings">Konfigurieren der IP-Adresse und Port der Lichtschalter-Servers</string>
    <string name="title_network_settings">Einstellungen für die Lichtschalter</string>
    <string name="network_address">Netzwerk Adresse</string>
    <string name="prompt_network_address">Netzwerk Adresse des Lichtschalters ein</string>
    <string name="network_port">Server Port</string>
    <string name="prompt_network_port">Port des zugehörigen Servers </string>
    <string name="preferences">Einstellungen</string>
	<string name="option_show_messages">Show TCP messages</string>
	<string name="options_category">Optionen</string>
	<string name="tcp_output_on">Tcp messages are output to text boxes</string>
	<string name="tcp_output_off">Tcp messages are NOT output to text boxes</string>
    <string name="irPower">08F7</string>
    <string name="irVolumeUp">58A7</string>
    <string name="irVolumeDown">708F</string>
    <string name="irDirect">50AF</string>
    <string name="irOptical">D02F</string>
    <string name="irCoax">30CF</string>
    <string name="irEffect">B847</string>
    <string name="irSettings">F807</string>
    <string name="irSubUp">C03F</string>
    <string name="irSubDown">807F</string>
    <string name="irCenterUp">40BF</string>
    <string name="irCenterDown">609F</string>
    <string name="irSurroundUp">00FF</string>
    <string name="irSurroundDown">20DF</string>
    <string name="irMuteDown">6897</string>
    <string name="irTest">A05F</string>
    <string name="irZ5500id">10EF</string>

</resources>
