<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/couch">
    <EditTextPreference android:title="@string/network_address"
        android:key="network_address_couch"
        android:defaultValue="192.168.0.45"
        android:summary="@string/prompt_network_address"/>
    <EditTextPreference android:title="@string/network_port"
        android:key="network_port_couch"
        android:defaultValue="80"
        android:summary="@string/prompt_network_port"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/diningTable">
        <EditTextPreference android:title="@string/network_address"
            android:key="network_address_diningtable"
            android:defaultValue="192.168.0.59"
            android:summary="@string/prompt_network_address"/>
        <EditTextPreference android:title="@string/network_port"
            android:key="network_port_diningtable"
            android:defaultValue="80"
            android:summary="@string/prompt_network_port"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/z5500Remote">
        <EditTextPreference android:title="@string/network_address"
            android:key="network_address_z5500"
            android:defaultValue="192.168.0.55"
            android:summary="@string/prompt_network_address"/>
        <EditTextPreference android:title="@string/network_port"
            android:key="network_port_z5500"
            android:defaultValue="80"
            android:summary="@string/prompt_network_port"/>
    </PreferenceCategory>
	<PreferenceCategory
		android:title="@string/options_category">
		<CheckBoxPreference
            android:key="option_show_messages"
            android:title="@string/option_show_messages"
            android:summaryOn="@string/tcp_output_on" 
            android:summaryOff="@string/tcp_output_off"
			/>
	</PreferenceCategory>
</PreferenceScreen>
